Fixed serializing codegen-modified SDFGs instead of source SDFGs Try to fix z-index issue on toasts

--- a/diode_2.0/client/external_lib/vanillatoasts/vanillatoasts.css
+++ b/diode_2.0/client/external_lib/vanillatoasts/vanillatoasts.css
@@ -4,6 +4,7 @@
   right: 0;
   width: 320px;
   font-family: 'Helvetica';
+  z-index: 100000;
 }
 
 .vanillatoasts-toast {
